--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 19:05:22 2018</p>
+         Last Run: Fri Jul 13 20:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 19:05:22 2018</p>
+         Last Run: Fri Jul 13 20:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -284,11 +284,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>3</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>4</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -453,7 +453,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "50",
-                 "43",
+                 "44",
                  "39",
                  "34",
                  "31"
@@ -465,7 +465,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "1",
-                 "4",
+                 "3",
                  "3",
                  "6",
                  "7"
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 19:05:22 2018</p>
+         Last Run: Fri Jul 13 20:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 19:05:22 2018</p>
+         Last Run: Fri Jul 13 20:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -714,7 +714,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>27</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -737,7 +737,7 @@
                         <td>42</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>NE</td>
+                        <td>ENE</td>
                         <td>14</td>
                      </tr>
                   </tbody>
@@ -866,7 +866,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
+                 "29",
                  "20",
                  "14"
                ]
@@ -885,7 +885,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 19:05:22 2018</p>
+         Last Run: Fri Jul 13 20:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -907,14 +907,14 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
-                        <td>3</td>
-                        <td>30</td>
+                        <td>27</td>
+                        <td>27</td>
+                        <td>1</td>
+                        <td>31</td>
                         <td>2</td>
                         <td>13</td>
-                        <td>NNE</td>
-                        <td>12</td>
+                        <td>E</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -924,9 +924,9 @@
                         <td>3</td>
                         <td>34</td>
                         <td>1</td>
-                        <td>16</td>
-                        <td>NNE</td>
-                        <td>12</td>
+                        <td>14</td>
+                        <td>NE</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -936,9 +936,9 @@
                         <td>3</td>
                         <td>40</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>NNE</td>
-                        <td>12</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -982,7 +982,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "26",
+                 "27",
                  "25",
                  "24"
                ]
@@ -993,7 +993,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "26",
+                 "27",
                  "25",
                  "24"
                ]
@@ -1046,7 +1046,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
+                 "1",
                  "3",
                  "3"
                ]
@@ -1056,7 +1056,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
+                 "31",
                  "34",
                  "40"
                ]
@@ -1066,9 +1066,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
-                 "12",
-                 "12"
+                 "10",
+                 "10",
+                 "9"
                ]
              }
            ]
