--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 20:05:17 2018</p>
+         Last Run: Fri Jul 13 21:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>13</td>
                         <td>13</td>
                         <td>1</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>3</td>
                         <td>16</td>
                         <td>NNW</td>
@@ -47,10 +47,10 @@
                         <td>14</td>
                         <td>0</td>
                         <td>51</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>22</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>6</td>
                         <td>13</td>
                         <td>NNW</td>
-                        <td>20</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -72,7 +72,7 @@
                         <td>0</td>
                         <td>38</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
                         <td>6</td>
                      </tr>
@@ -214,7 +214,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
+                 "62",
                  "51",
                  "43",
                  "38",
@@ -227,8 +227,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "28",
-                 "22",
-                 "20",
+                 "21",
+                 "19",
                  "6",
                  "11"
                ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 20:05:17 2018</p>
+         Last Run: Fri Jul 13 21:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -312,7 +312,7 @@
                         <td>6</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>6</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -320,7 +320,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>32</td>
                         <td>7</td>
                         <td>10</td>
                         <td>SE</td>
@@ -456,7 +456,7 @@
                  "44",
                  "39",
                  "34",
-                 "31"
+                 "32"
                ]
              },
              {
@@ -467,7 +467,7 @@
                  "1",
                  "3",
                  "3",
-                 "6",
+                 "5",
                  "7"
                ]
              }
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 20:05:17 2018</p>
+         Last Run: Fri Jul 13 21:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -534,7 +534,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SE</td>
@@ -658,7 +658,7 @@
                "data":[
                  "23",
                  "26",
-                 "31"
+                 "30"
                ]
              },
              {
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 20:05:17 2018</p>
+         Last Run: Fri Jul 13 21:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -885,7 +885,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 20:05:17 2018</p>
+         Last Run: Fri Jul 13 21:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -913,7 +913,7 @@
                         <td>31</td>
                         <td>2</td>
                         <td>13</td>
-                        <td>E</td>
+                        <td>ENE</td>
                         <td>10</td>
                      </tr>
                      <tr>
