--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 22:05:03 2018</p>
+         Last Run: Fri Jul 13 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 22:05:03 2018</p>
+         Last Run: Fri Jul 13 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -274,7 +274,7 @@
                         <td>0</td>
                         <td>50</td>
                         <td>2</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>S</td>
                         <td>1</td>
                      </tr>
@@ -288,7 +288,7 @@
                         <td>3</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>4</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -300,7 +300,7 @@
                         <td>4</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>3</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -312,7 +312,7 @@
                         <td>6</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>6</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -324,7 +324,7 @@
                         <td>7</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>6</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -465,10 +465,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "1",
-                 "4",
                  "3",
-                 "6",
-                 "6"
+                 "5",
+                 "13",
+                 "12"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 22:05:03 2018</p>
+         Last Run: Fri Jul 13 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 22:05:03 2018</p>
+         Last Run: Fri Jul 13 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -706,7 +706,7 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
@@ -714,7 +714,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>26</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -726,7 +726,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>ENE</td>
-                        <td>19</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -738,7 +738,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>ENE</td>
-                        <td>14</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -866,9 +866,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "26",
-                 "19",
-                 "14"
+                 "30",
+                 "21",
+                 "13"
                ]
              }
            ]
@@ -885,7 +885,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 22:05:03 2018</p>
+         Last Run: Fri Jul 13 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -910,7 +910,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>1</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>2</td>
                         <td>13</td>
                         <td>ENE</td>
@@ -1056,7 +1056,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
+                 "31",
                  "34",
                  "40"
                ]
