--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 00:05:03 2018</p>
+         Last Run: Sat Jul 14 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>13</td>
                         <td>13</td>
                         <td>0</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>3</td>
                         <td>16</td>
                         <td>NNW</td>
@@ -43,10 +43,10 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>14</td>
-                        <td>14</td>
+                        <td>15</td>
+                        <td>15</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>50</td>
                         <td>5</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -67,8 +67,8 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>0</td>
                         <td>38</td>
                         <td>7</td>
@@ -82,7 +82,7 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -133,9 +133,9 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "13",
-                 "14",
+                 "15",
                  "16",
-                 "18",
+                 "17",
                  "19"
                ]
              },
@@ -146,9 +146,9 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "13",
-                 "14",
+                 "15",
                  "16",
-                 "18",
+                 "17",
                  "19"
                ]
              }
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "51",
+                 "61",
+                 "50",
                  "42",
                  "38",
-                 "34"
+                 "35"
                ]
              },
              {
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 00:05:03 2018</p>
+         Last Run: Sat Jul 14 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -274,7 +274,7 @@
                         <td>0</td>
                         <td>50</td>
                         <td>2</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>S</td>
                         <td>1</td>
                      </tr>
@@ -284,7 +284,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>3</td>
                         <td>8</td>
                         <td>S</td>
@@ -300,7 +300,7 @@
                         <td>4</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -453,7 +453,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "50",
-                 "44",
+                 "43",
                  "39",
                  "34",
                  "31"
@@ -466,7 +466,7 @@
                "data":[
                  "1",
                  "3",
-                 "5",
+                 "4",
                  "13",
                  "13"
                ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 00:05:03 2018</p>
+         Last Run: Sat Jul 14 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -510,7 +510,7 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>23</td>
+                        <td>22</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SE</td>
@@ -524,7 +524,7 @@
                         <td>0</td>
                         <td>26</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -536,7 +536,7 @@
                         <td>0</td>
                         <td>31</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -656,7 +656,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "23",
+                 "22",
                  "26",
                  "31"
                ]
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 00:05:03 2018</p>
+         Last Run: Sat Jul 14 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -714,7 +714,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>34</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -725,8 +725,8 @@
                         <td>33</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>E</td>
-                        <td>22</td>
+                        <td>ENE</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -736,9 +736,9 @@
                         <td>0</td>
                         <td>42</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ENE</td>
-                        <td>14</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -866,9 +866,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "34",
-                 "22",
-                 "14"
+                 "33",
+                 "23",
+                 "17"
                ]
              }
            ]
@@ -885,7 +885,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 00:05:03 2018</p>
+         Last Run: Sat Jul 14 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -907,38 +907,38 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
-                        <td>1</td>
-                        <td>31</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>3</td>
+                        <td>36</td>
                         <td>2</td>
                         <td>13</td>
-                        <td>ENE</td>
-                        <td>10</td>
+                        <td>NE</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>3</td>
-                        <td>34</td>
+                        <td>39</td>
                         <td>1</td>
-                        <td>14</td>
-                        <td>NE</td>
-                        <td>10</td>
+                        <td>16</td>
+                        <td>NNE</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>3</td>
-                        <td>40</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>4</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNE</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -982,9 +982,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "27",
                  "25",
-                 "24"
+                 "24",
+                 "23"
                ]
              },
              {
@@ -993,9 +993,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "27",
                  "25",
-                 "24"
+                 "24",
+                 "23"
                ]
              }
            ]
@@ -1046,9 +1046,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
                  "3",
-                 "3"
+                 "3",
+                 "4"
                ]
              },
              {
@@ -1056,9 +1056,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
-                 "34",
-                 "40"
+                 "36",
+                 "39",
+                 "43"
                ]
              },
              {
@@ -1066,9 +1066,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "10",
-                 "10",
-                 "9"
+                 "12",
+                 "11",
+                 "10"
                ]
              }
            ]
