--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 01:05:03 2018</p>
+         Last Run: Sat Jul 14 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -30,27 +30,27 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>13</td>
                         <td>13</td>
                         <td>0</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>3</td>
                         <td>16</td>
                         <td>NNW</td>
-                        <td>23</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>15</td>
-                        <td>15</td>
+                        <td>14</td>
+                        <td>14</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>5</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>18</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -62,15 +62,15 @@
                         <td>6</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>16</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>37</td>
                         <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -86,7 +86,7 @@
                         <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>11</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -133,9 +133,9 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "13",
-                 "15",
+                 "14",
                  "16",
-                 "17",
+                 "18",
                  "19"
                ]
              },
@@ -146,9 +146,9 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "13",
-                 "15",
+                 "14",
                  "16",
-                 "17",
+                 "18",
                  "19"
                ]
              }
@@ -214,10 +214,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
-                 "50",
+                 "62",
+                 "51",
                  "42",
-                 "38",
+                 "37",
                  "35"
                ]
              },
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "34",
                  "23",
-                 "18",
-                 "16",
+                 "15",
                  "6",
-                 "11"
+                 "17"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 01:05:03 2018</p>
+         Last Run: Sat Jul 14 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -272,11 +272,11 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>2</td>
                         <td>6</td>
-                        <td>S</td>
-                        <td>1</td>
+                        <td>SSW</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -284,11 +284,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>3</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>3</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -298,21 +298,21 @@
                         <td>0</td>
                         <td>39</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSE</td>
-                        <td>4</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
                         <td>34</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSE</td>
-                        <td>13</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -322,9 +322,9 @@
                         <td>0</td>
                         <td>31</td>
                         <td>7</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SE</td>
-                        <td>13</td>
+                        <td>11</td>
                      </tr>
                   </tbody>
                </table>
@@ -373,7 +373,7 @@
                  "16",
                  "18",
                  "20",
-                 "21",
+                 "22",
                  "23"
                ]
              },
@@ -386,7 +386,7 @@
                  "16",
                  "18",
                  "20",
-                 "21",
+                 "22",
                  "23"
                ]
              }
@@ -452,8 +452,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "43",
+                 "51",
+                 "44",
                  "39",
                  "34",
                  "31"
@@ -464,11 +464,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
-                 "3",
-                 "4",
-                 "13",
-                 "13"
+                 "7",
+                 "8",
+                 "8",
+                 "14",
+                 "11"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 01:05:03 2018</p>
+         Last Run: Sat Jul 14 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -510,7 +510,7 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>22</td>
+                        <td>23</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SE</td>
@@ -524,7 +524,7 @@
                         <td>0</td>
                         <td>26</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -534,10 +534,10 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>0</td>
-                        <td>14</td>
-                        <td>SE</td>
+                        <td>13</td>
+                        <td>ESE</td>
                         <td>0</td>
                      </tr>
                   </tbody>
@@ -656,9 +656,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "22",
+                 "23",
                  "26",
-                 "31"
+                 "30"
                ]
              },
              {
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 01:05:03 2018</p>
+         Last Run: Sat Jul 14 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -706,27 +706,27 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>Clear</td>
+                        <td>29</td>
+                        <td>29</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>27</td>
                         <td>1</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>33</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>27</td>
+                        <td>27</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>ENE</td>
-                        <td>23</td>
+                        <td>E</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -734,11 +734,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ENE</td>
-                        <td>17</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -782,8 +782,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "28",
-                 "26",
+                 "29",
+                 "27",
                  "24"
                ]
              },
@@ -793,8 +793,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "28",
-                 "26",
+                 "29",
+                 "27",
                  "24"
                ]
              }
@@ -856,9 +856,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "28",
-                 "33",
-                 "42"
+                 "27",
+                 "34",
+                 "43"
                ]
              },
              {
@@ -866,9 +866,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
-                 "23",
-                 "17"
+                 "25",
+                 "20",
+                 "18"
                ]
              }
            ]
@@ -885,7 +885,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 01:05:03 2018</p>
+         Last Run: Sat Jul 14 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -909,34 +909,34 @@
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>3</td>
-                        <td>36</td>
-                        <td>2</td>
-                        <td>13</td>
-                        <td>NE</td>
                         <td>12</td>
+                        <td>40</td>
+                        <td>2</td>
+                        <td>14</td>
+                        <td>NE</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>3</td>
-                        <td>39</td>
+                        <td>15</td>
+                        <td>42</td>
                         <td>1</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>11</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>4</td>
-                        <td>43</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>17</td>
+                        <td>48</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>NNE</td>
                         <td>10</td>
                      </tr>
@@ -984,7 +984,7 @@
                "data":[
                  "25",
                  "24",
-                 "23"
+                 "22"
                ]
              },
              {
@@ -995,7 +995,7 @@
                "data":[
                  "25",
                  "24",
-                 "23"
+                 "22"
                ]
              }
            ]
@@ -1046,9 +1046,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
-                 "4"
+                 "12",
+                 "15",
+                 "17"
                ]
              },
              {
@@ -1056,9 +1056,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
-                 "39",
-                 "43"
+                 "40",
+                 "42",
+                 "48"
                ]
              },
              {
@@ -1066,8 +1066,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
-                 "11",
+                 "10",
+                 "10",
                  "10"
                ]
              }
