--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 05:05:05 2018</p>
+         Last Run: Sat Jul 14 06:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -30,7 +30,7 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>13</td>
                         <td>13</td>
                         <td>1</td>
@@ -38,7 +38,7 @@
                         <td>3</td>
                         <td>16</td>
                         <td>NNW</td>
-                        <td>33</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,11 +46,11 @@
                         <td>15</td>
                         <td>15</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>49</td>
                         <td>5</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>23</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>41</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NNW</td>
-                        <td>15</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>7</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNW</td>
-                        <td>5</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -215,9 +215,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "60",
-                 "50",
-                 "42",
-                 "37",
+                 "49",
+                 "41",
+                 "36",
                  "35"
                ]
              },
@@ -226,10 +226,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
-                 "23",
-                 "15",
-                 "5",
+                 "29",
+                 "19",
+                 "13",
+                 "6",
                  "16"
                ]
              }
@@ -242,12 +242,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 05:05:05 2018</p>
+         Last Run: Sat Jul 14 06:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -485,7 +486,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 05:05:05 2018</p>
+         Last Run: Sat Jul 14 06:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -685,7 +686,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 05:05:05 2018</p>
+         Last Run: Sat Jul 14 06:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -714,7 +715,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>24</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -722,11 +723,11 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>20</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -738,7 +739,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>ENE</td>
-                        <td>18</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -857,7 +858,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "27",
-                 "34",
+                 "33",
                  "42"
                ]
              },
@@ -866,9 +867,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "24",
-                 "20",
-                 "18"
+                 "21",
+                 "19",
+                 "20"
                ]
              }
            ]
@@ -885,7 +886,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 05:05:05 2018</p>
+         Last Run: Sat Jul 14 06:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -909,12 +910,12 @@
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>11</td>
-                        <td>39</td>
+                        <td>12</td>
+                        <td>38</td>
                         <td>2</td>
                         <td>14</td>
-                        <td>NE</td>
-                        <td>8</td>
+                        <td>ENE</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -922,10 +923,10 @@
                         <td>24</td>
                         <td>24</td>
                         <td>14</td>
-                        <td>42</td>
+                        <td>41</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>NNE</td>
+                        <td>NE</td>
                         <td>9</td>
                      </tr>
                      <tr>
@@ -934,7 +935,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>16</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NNE</td>
@@ -1046,7 +1047,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "11",
+                 "12",
                  "14",
                  "16"
                ]
@@ -1056,9 +1057,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "39",
-                 "42",
-                 "47"
+                 "38",
+                 "41",
+                 "46"
                ]
              },
              {
@@ -1066,7 +1067,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "8",
+                 "9",
                  "9",
                  "9"
                ]
